testsuite/tests/typecheck/should_compile/tc006.alan
unusedResult() : proc
  foo1() : int
  { return 42; }
{
  foo1();
}
