testsuite/tests/typecheck/should_fail/tcfail012.alan
undefined() : proc
  foo : int;

  fun2() : proc
  {
    foo = a;
  }
{
  a = 4;
  foo = a + 5;
  foo = b + 6;

  fun(42, 43);
  fun(42, 43, 44);
}
